--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.2.2</version>
+            <version>RELEASE</version>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
@@ -57,6 +57,5 @@
         <module>FoodOrderingApp-db</module>
         <module>FoodOrderingApp-service</module>
     </modules>
-
 
 </project>
